
AUX_SOURCE_DIRECTORY(. LIBOS3_SRC)

INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Software/uC-CPU)
INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Software/uC-LIB)
INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Software/uCOS-III/Ports/POSIX/GNU)
INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Examples/POSIX/GNU/OS3)
INCLUDE_DIRECTORIES(../../uC-CPU)
INCLUDE_DIRECTORIES(../../uC-CPU/Posix/GNU)

add_library(libos1  ${LIBOS3_SRC})
