AUX_SOURCE_DIRECTORY(. LIBHWP_SRC)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Software/uC-CPU)
INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Software/uC-LIB)
INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Software/uC-CPU/Posix/GNU)
INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Examples/POSIX/GNU/OS3)


add_library(libhw2 ${LIBHWP_SRC})
