
AUX_SOURCE_DIRECTORY(. LIBOS3P_SRC)

INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Software/uC-CPU)
INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Software/uC-LIB)
INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Software/uCOS-III/Ports/POSIX/GNU)
INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Software/uC-CPU/Posix/GNU)
INCLUDE_DIRECTORIES(${UCOS3_SOURCE_DIR}/Examples/POSIX/GNU/OS3)

add_library(libos2  ${LIBOS3P_SRC})
